# Qtedit

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: README.md  conf_dialog.cpp  conf_dialog.h  confs.cpp  confs.h  highlighter.cpp  highlighter.h  main.cpp  qtedit.cpp  qtedit.h  qtedit_slots.cpp
